[package]
name = "cdk-ffi-swift"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
version = "0.16.0"
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "cdk_ffi_swift"


[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"

[dependencies]
cdk-ffi = { version = "=0.16.0", features = ["npubcash", "bip353"] }
uniffi = { version = "0.30", features = ["cli"] }


[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[lints]


[profile.release]
lto = true
strip = true
codegen-units = 1
